Issue #332. Added calculation and displaying of midpoint in measurement dock.

--- a/mandelbulber2/qt/render_window.ui
+++ b/mandelbulber2/qt/render_window.ui
@@ -419,7 +419,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="windowTitle">
-    <string>&amp;Image adjustments</string>
+    <string>Image adjustments</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -492,7 +492,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="windowTitle">
-    <string>&amp;Navigation</string>
+    <string>Navigation</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
@@ -607,7 +607,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="windowTitle">
-    <string>Ob&amp;jects</string>
+    <string>Objects</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -674,7 +674,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="windowTitle">
-    <string>&amp;Rendering engine</string>
+    <string>Rendering engine</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -774,7 +774,7 @@
   </widget>
   <widget class="QDockWidget" name="dockWidget_animation">
    <property name="windowTitle">
-    <string>&amp;Animation</string>
+    <string>Animation</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
@@ -804,7 +804,7 @@
   </widget>
   <widget class="QDockWidget" name="dockWidget_histogram">
    <property name="windowTitle">
-    <string>&amp;Statistics</string>
+    <string>Statistics</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
@@ -843,7 +843,7 @@
     <bool>false</bool>
    </property>
    <property name="windowTitle">
-    <string>&amp;Queue</string>
+    <string>Queue</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
@@ -910,7 +910,7 @@
     <bool>false</bool>
    </property>
    <property name="windowTitle">
-    <string>&amp;Measurement</string>
+    <string>Measurement</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
@@ -974,7 +974,7 @@
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="windowTitle">
-    <string>Ma&amp;terial editor</string>
+    <string>Material editor</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -1065,7 +1065,7 @@
   </widget>
   <widget class="QDockWidget" name="dockWidget_gamepad_dock">
    <property name="windowTitle">
-    <string>&amp;Gamepad</string>
+    <string>Gamepad</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
