--- a/mandelbulber2/formula/ui/mandeltorus_v2.ui
+++ b/mandelbulber2/formula/ui/mandeltorus_v2.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>898</width>
-    <height>1762</height>
+    <height>1848</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -340,30 +340,17 @@
     </layout>
    </item>
    <item>
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_79">
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="3" column="2">
-      <widget class="QLabel" name="label_51">
-       <property name="text">
-        <string>Stop at iteration:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="3">
-      <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_E">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="maximum">
-        <number>999</number>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_E">
        <property name="sizePolicy">
@@ -383,17 +370,10 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_71">
+     <item row="3" column="2">
+      <widget class="QLabel" name="label_51">
        <property name="text">
-        <string>Start at iteration:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_132">
-       <property name="text">
-        <string>offset:</string>
+        <string>stop at iteration:</string>
        </property>
       </widget>
      </item>
@@ -422,6 +402,33 @@
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_71">
+       <property name="text">
+        <string>start at iteration:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="3">
+      <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_E">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximum">
+        <number>999</number>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_132">
+       <property name="text">
+        <string>offset:</string>
        </property>
       </widget>
      </item>
